# mp2-lab8

./: .travis.yml  CMakeLists.txt  README.md
gtest/: gtest-all.cc  gtest.h
stacklist/: main.cpp
stacklistlib/: CMakeLists.txt  Hello.h  TList.h  TStackList.cpp  TStackList.h
test/: test_stacklist.cpp
